--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,13 @@
 @import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+font-family: 'Fredoka', sans-serif;
+}
 
 /* @layer components{
 
