--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,11 @@ font-family: 'Fredoka', sans-serif;
 .btn{
     @apply py-2 px-7 text-xl  border-4 rounded-lg  duration-150 font-semibold w-[25rem] max-w-[75%]
 }
+
+.input{
+    @apply  border border-black  py-4 px-6 rounded-lg min-h-[3.2rem] lg:min-w-[13.75rem] 
+}
+
 }
 
 
