--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ font-family: 'Fredoka', sans-serif;
 }
 
 .input{
-    @apply  border border-black  py-4 px-6 rounded-lg min-h-[3.2rem] lg:min-w-[13.75rem] 
+    @apply  border border-black  py-4 px-6 rounded-lg min-h-[3.2rem] sm:min-w-[13.75rem] 
 }
 
 .text{
