--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ font-family: 'Fredoka', sans-serif;
 
 @layer components{
 .btn{
-    @apply py-2 px-7 text-xl  border-4 rounded-lg  duration-150 font-semibold w-[25rem] max-w-[75%] bg-black text-white dark:text-black dark:bg-white
+    @apply py-2 px-7 text-xl  border-4 rounded-lg  duration-150 font-semibold w-[25rem]  bg-black text-white dark:text-black dark:bg-white
 }
 
 .input{
