--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,10 @@ font-family: 'Fredoka', sans-serif;
   @apply !text-black dark:!text-white
 }
 
+.text-inverse{
+  @apply dark:!text-black !text-white
+}
+
 .bg{
   @apply dark:bg-slate-800 bg-slate-200
 }
