--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 *{
 font-family: 'Fredoka', sans-serif;
   box-sizing: border-box;
-  transition: all .25s ease;
+  /* transition: all .25s ease; */
 }
 
 
