style: update style

--- a/assets/css/timeline/one.scss
+++ b/assets/css/timeline/one.scss
@@ -51,7 +51,8 @@ h4 {
   position: absolute;
   top: 0;
   right: -40px;
-  z-index: 3
+  z-index: 3;
+  cursor: pointer;
 }
 
 .main-timeline .timeline-icon:before {
